...
        android:background="#014378"
        android:keepScreenOn="true"
        android:orientation="vertical"
        tools:context=".sensor.ec.SensorActivity"
        tools:ignore="Overdraw">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/layoutTitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
...
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="6dp"
            android:paddingBottom="20dp"
            tools:ignore="UnknownId,UnknownIdInLayout">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:textColor="#fff"
                android:textSize="22sp"
                tools:text="Water - Electrical Conductivity" />

            <TextView
                android:id="@+id/textSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#d6f6fdf6"
                android:textSize="16sp"
                tools:text="Sensor ID: 123" />

...
                android:id="@+id/imageUsbConnection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:alpha="0"
                android:contentDescription="@string/deviceConnectSensor"
                android:paddingBottom="24dp"
                android:src="@drawable/usb" />

            <ProgressBar
                android:id="@+id/progressWait"
                android:layout_width="100dp"
...
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="?android:textColorSecondaryInverse"
                    android:textSize="70sp"
                    tools:text="20000" />

                <TextView
                    android:id="@+id/textUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dp"
                    android:alpha="0.4"
                    android:shadowColor="#cccccc"
                    android:shadowRadius="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:textColorSecondaryInverse"
                    tools:text="μS/cm" />

                <TextView
                    android:id="@+id/textResult2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
...
                    android:textColor="?android:textColorSecondaryInverse"
                    android:textSize="60sp"
                    android:visibility="gone"
                    tools:text="24" />

                <TextView
                    android:id="@+id/textUnit2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dp"
                    android:alpha="0.4"
                    android:shadowColor="#3c4a5b"
                    android:shadowRadius="1"
                    android:text="@string/celsius"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:textColorSecondaryInverse"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonSubmitResult"
                    style="@style/Button"
                    android:layout_marginTop="33dp"
                    android:onClick="onClickSubmitResult"
                    android:text="@string/submitResult"
                    android:theme="?primaryButtonStyle"
                    android:visibility="gone" />
...
