...
    <string name="required">Required</string>
    <string name="survey">Survey</string>
    <string name="success" tools:ignore="UnusedResources">Success</string>
    <string name="done" tools:ignore="UnusedResources">Done</string>
    <string name="close">Close</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="navigate_up">Navigate up</string>
    <string name="logo">Logo</string>

    <string name="result">Result</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>

...
    <plurals name="minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>

    <!--External-->
    <string name="sensor">Sensor</string>
    <string name="sensors">Sensors</string>

    <!--Sensor Details Screen-->
    <string name="deviceConnecting">Connecting to Device</string>

    <!--Sensor-->
    <string name="deviceConnectSensor">Connect sensor</string>
    <string name="celsius">°Celsius</string>
    <string name="dipSensorInSample">Dip sensor in sample</string>

    <string name="selectTest">Select Test</string>
    <string name="awaitingResult">Awaiting result</string>

    <string name="deviceConnected">Device connected</string>
    <string name="unableToConnect">Could not connect. Try connecting again.</string>
    <string name="sensorDetails">Sensor Details</string>
    <string name="enterAnIdForSensor">Enter an Id for this sensor</string>
...

    <!--Permission-->
    <string name="storagePermission">Storage permission is required</string>
    <string name="cameraAndStoragePermissions">Camera &amp; storage permissions are required</string>

    <!--Sensor-->
    <string name="incorrectDevice">Incorrect Device</string>
    <string name="expectedDeviceNotFound">The expected sensor was not found.</string>
    <string name="connectCorrectSensor"><Data><![CDATA[Connect the <b>%s</b> sensor.]]></Data></string>

    <!--Messages-->
    <string name="phoneDoesNotSupport">This feature is not supported by this device</string>
    <string name="errorLoadingConfiguration">Could not load configuration information</string>
...
