<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<!--Strings used for diagnostics, automated and unit tests-->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="UnusedResources,MissingTranslation">

    <!--Test Types-->
    <string name="fluoride">Water - Fluoride</string>
    <string name="chromium">Water - Chromium</string>
    <string name="coliforms">Coliforms</string>
    <string name="arsenic">Water - Arsenic</string>
    <string name="freeChlorine">Water - Free Chlorine</string>
    <string name="iron">Water - Total Iron</string>
    <string name="electricalConductivity">Water - Electrical Conductivity</string>

    <!--Akvo Flow -->
    <string name="unnamedDataPoint">Unnamed data point</string>
    <string name="addDataPoint">Add Data Point</string>
    <string name="goToText">Go to test</string>
    <string name="useExternalSource">Use External Source</string>

</resources>
